--- a/src/Zen.Utilities/Templates/InstructionTable.html
+++ b/src/Zen.Utilities/Templates/InstructionTable.html
@@ -45,9 +45,21 @@
             margin-top: 2em;
             margin-bottom: 1em;
         }
+
+        .code {
+            font-family: monospace;
+            white-space: pre;
+        }
     </style>
+    <script language="javascript" type="text/javascript">
+        function showCode(code) {
+            document.getElementById('code').innerText = code;
+            document.getElementById('code').style.display = 'block';
+        }
+    </script>
 </head>
 <body>
+<!--CODE-->
 <!--CONTENT-->
 </body>
 </html>
