--- a/src/Zen.Utilities/Templates/InstructionTable.html
+++ b/src/Zen.Utilities/Templates/InstructionTable.html
@@ -38,6 +38,7 @@
             background-color: limegreen;
             font-weight: bolder;
             color: black;
+            cursor: pointer;
         }
 
         .table-title {
