--- a/src/Zen.Utilities/Templates/InstructionTable.html
+++ b/src/Zen.Utilities/Templates/InstructionTable.html
@@ -54,7 +54,7 @@
             font-family: monospace;
             white-space: pre;
             display: none;
-            position: absolute;
+            position: fixed;
             top: 5em;
             left: 50%;
             width: auto;
