--- a/src/Zen.Utilities/Templates/InstructionTable.html
+++ b/src/Zen.Utilities/Templates/InstructionTable.html
@@ -66,6 +66,8 @@
             padding: 1em;
             border-radius: 1em;
             border: 2px white solid;
+            overflow-y: auto;
+            max-height: 80%;
         }
     </style>
     <script language="javascript" type="text/javascript">
